# screen-recorder

./: .gitignore  README.md
ffmpeg/: Funzionante.cpp  ScreenRecorder.cpp  main.cpp  run.sh
gui/RecorderGUI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mainview.cpp  mainview.h  recorder.cpp  recorder.h  recorder_backup.cpp  recorder_backup.h  resizableframe.cpp  resizableframe.h
gui/RecorderGUI/ui/: Recorder.ui  Recorder_backup.ui
working-example/RecorderGUI/: .gitignore  CMakeLists.txt  main.cpp  recorder.cpp  recorder.h  resizableframe.cpp  resizableframe.h  resources.qrc
working-example/RecorderGUI/ffmpeg/: ListAVDevices.cpp  ListAVDevices.h  ScreenRecorder.cpp  ScreenRecorder.h
working-example/RecorderGUI/ui/: MainView.ui  Recorder.ui
